--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eventURL": "https://ldjam.com/events/ludum-dare/50/$280398",
     "themeDescription": "for the theme",
     "themePre": "",
-    "themeItalic": "\"TBD\"",
+    "themeItalic": "\"Delay the inevitable\"",
     "themePost": "",
     "repoURL": "https://github.com/sartak/ld50.shawn.dev"
   },
