--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eventNamePre": "the",
     "eventNameBold": "Ludum Dare 50",
     "eventNamePost": "compo",
-    "eventURL": "https://ldjam.com/events/ludum-dare/50/$280398",
+    "eventURL": "https://ldjam.com/events/ludum-dare/50/nighty-night-nosferatu",
     "themeDescription": "for the theme",
     "themePre": "",
     "themeItalic": "\"Delay the inevitable\"",
